--- a/inst/exercises/R/introductionR/introductionR.Rmd
+++ b/inst/exercises/R/introductionR/introductionR.Rmd
@@ -1,22 +1,23 @@
 ---
 title: |
-  | Introduction to R and R Markdown 
+  | Introduction to R, R Markdown and the RTM package
   | for Reaction-Transport Modellers
 subtitle: |
   | Teaching material accompanying the course 
   | Reaction Transport Modelling in the Hydrosphere
-author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
+author: "Lubos Polerecky and Karline Soetaert, Utrecht University"
 date: "July 2021"
 output:
   pdf_document: 
     number_sections: true
     toc: true
+    keep_tex:  false
   header-includes: 
     \usepackage{float} 
     \floatplacement{figure}{ht}
   word_document: default
   html_document: default
-abstract: \noindent This short reader introduces you to the programming tools that we will use in the *Reaction-Transport Modelling* class. It will show you how to merge text, programming code, and the results of this code in one document. The programming language we use is R, the text is written in *R Markdown*, and the creation of the documents is done by *knitr*. We recommend that you recreate the examples provided in this document and then solve the exercises. In this way you will start gradually building your knowledge of R and *R Markdown*, which will help you understand more efficiently the material covered in the course.
+abstract: \noindent This short reader introduces you to the programming tools that we will use in the *Reaction-Transport Modelling* class. It shows you how to merge text, programming code, and the results of this code in one document. The programming language we use is *R*, the text is written in *R Markdown*, and the documents are created by *knit*. The reader also explains the basics about the teaching material we will use in the course. This material is bundled in an *R*-package *RTM*. We recommend that you recreate the examples provided in this document and then solve the exercises. In this way you will start gradually building your knowledge of *R* and *R Markdown*, which will help you understand more efficiently the material covered in the course.
 ---
 
 ```{r child = 'introductionR_Q.Rmd'}
